# FAIRtoWISE

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  clean_changes.diff  index.html  kg_analysis.ipynb  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build-app.yml  publish-image.yml
_tests/: test_example.py
about/: index.html
app/: llm_factory.py  main.py
app/modules/: concepts2kg.py  extract_terms.py  extract_terms_linkml.py  extractor.py  extractor_base.py  extractor_cborg.py  extractor_factory.py  extractor_ollama.py  kg_rag_ollama.py  ontology.py  pdfs2concepts.py  startup_concepts2kg.sh  startup_kg_rag_ollama.sh  startup_ollama_1node.sh  startup_ollama_4nodes.sh  startup_pdfs2concepts.sh
mkdocs/: mkdocs.yml
mkdocs/docs/: about.md  core_model.md  index.md  nsys_profiling.md  scripts.md  workflow.md
ontologies/: matonto_meta.yaml
polymer_papers/: 10.1002adfm.201002014.md
scripts/: download_pdfs.py  llamaindex_monolith.py  nvtx_annotate.py  update_readme_tree.py
search/: search_index.json
storage/competency_questions/: thomas_f.txt
storage/kg/: matkg-jun6.json  matkg_graph.json
storage/ontologies/: matonto.json  matonto.owl
storage/ontology/: opv_ontology_DeepSeek70b_CBORG.ttl  opv_ontology_after_extraction.owl  opv_ontology_current.owl  opv_ontology_phase1.ttl  opv_ontology_updated.owl  opv_ontology_updated.ttl
storage/schema/: matkg_schema.yaml
storage/terminology/: extracted_terms-jun6.json
terminology/: parse_terms.py
test/: index.html
(+8 files in other folders)
