[project]
name = "fairtowise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "pandas>=2.2.3",
    "rdflib>=7.1.4",
    "seaborn>=0.13.2",
]
